Use Paths#get instead of Path#of